# libtike-cufft

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py  test.py
src/cuda/: CMakeLists.txt  ptychofft.cu
src/cuda/ptycho/: CMakeLists.txt  kernels.cu  ptychofft.cu
src/cuda/pybind11/: ptychofft.cxx
src/cuda/swig/: CMakeLists.txt  ptychofft.i  radonusfft.i
src/cuda/tomo/: CMakeLists.txt  radonusfft.cu
src/include/: ptychofft.cuh  radonusfft.cuh
src/libtike/cufft/: __init__.py  _convolution.py  _propagation.py  _ptycho.py  ptycho.py  tomo.py
src/libtike/cupy/: __init__.py  convolution.cu  convolution.py  propagation.py  ptycho.py
src/ptychocg/: solver.py
tests/: test.py  test_adjoint.py  test_ptycho.py  test_tomo.py
